# minesweeper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  WINDOWS_BUILD.md  build.sh  imgui.ini  vcpkg-configuration.json  vcpkg.json
.github/workflows/: README.md  build.yml  ci.yaml
src/: Renderer.cpp  cell.cpp  cell.h  game_board.cpp  game_board.h  game_board.hpp  game_settings.h  input_handler.cpp  input_handler.h  main.cpp  renderer.cpp  renderer.h  ui_manager.cpp  ui_manager.h
